<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/category"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_cloud"
            android:title="@string/nav_product"/>
        <item
            android:id="@+id/nav_life"
            android:icon="@drawable/ic_photo_camera"
            android:title="@string/nav_life"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_photo_music"
            android:title="@string/nav_music"/>
        <item
            android:id="@+id/nav_emotion"
            android:icon="@drawable/ic_photo_emotion"
            android:title="@string/nav_emotion"/>
        <item
            android:id="@+id/nav_profession"
            android:icon="@drawable/ic_photo_financial"
            android:title="@string/nav_profession"/>
        <item
            android:id="@+id/nav_zhihu"
            android:icon="@drawable/ic_photo_computer"
            android:title="@string/nav_zhihu"/>

        <item
            android:id="@+id/nav_user_add"
            android:icon="@drawable/ic_photo_add"
            android:title="@string/nav_user_define"/>
    </group>

    <group android:id="@+id/other">
        <item
            android:id="@+id/app_bar_switch"
            android:icon="@drawable/ic_photo_color_chooser"
            android:title="@string/nav_night_mode"
            app:actionLayout="@layout/item_switch"/>
        <item
            android:id="@+id/nav_color_chooser"
            android:icon="@drawable/ic_photo_color_chooser"
            android:title="@string/nav_color_chooser"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_photo_info"
            android:title="@string/nav_activity_about"/>
    </group>
</menu>
